--- a/Views/Devices/Create.cshtml
+++ b/Views/Devices/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model Winedge.Models.UserDevice
+﻿@model Winedge.Models.Device
 
 @{
     ViewData["Title"] = "Cadastrar Dispositivo";
@@ -20,15 +20,9 @@
                     <div asp-validation-summary="ModelOnly" class="text-danger mb-3"></div>
 
                     <div class="mb-3">
-                        <label asp-for="User" class="control-label">Usuário</label>
-                        <input asp-for="User" class="form-control" />
-                        <span asp-validation-for="User" class="text-danger"></span>
-                    </div>
-
-                    <div class="mb-3">
-                        <label asp-for="Device" class="control-label">Dispositivo</label>
-                        <input asp-for="Device" class="form-control" />
-                        <span asp-validation-for="Device" class="text-danger"></span>
+                        <label asp-for="DeviceName" class="control-label">Dispositivo</label>
+                        <input asp-for="DeviceName" class="form-control" />
+                        <span asp-validation-for="DeviceName" class="text-danger"></span>
                     </div>
                 </div>
 
