add trigger buzzer_on

--- a/Views/About/Index.cshtml
+++ b/Views/About/Index.cshtml
@@ -59,33 +59,33 @@
                 <ul class="list-group list-group-flush">
 
                     <li class="list-group-item d-flex justify-content-between align-items-center">
-                        EDUARDO URBANOVICZ
-                        <span class="badge bg-secondary rounded-pill">RA: 0000</span>
+                        EDUARDO SOUZA BASTIANI URBANOVICZ
+                        <span class="badge bg-secondary rounded-pill">RA: 082230018</span>
                     </li>
 
                     <li class="list-group-item d-flex justify-content-between align-items-center">
-                        EMANUEL CARNEIRO
-                        <span class="badge bg-secondary rounded-pill">RA: 0000</span>
+                        EMANUEL CARNEIRO DA SILVA
+                        <span class="badge bg-secondary rounded-pill">RA: 082230017</span>
                     </li>
 
                     <li class="list-group-item d-flex justify-content-between align-items-center">
-                        JOÃO VITOR
-                        <span class="badge bg-secondary rounded-pill">RA: 0000</span>
+                        JOÃO VITOR MACIEL NAI
+                        <span class="badge bg-secondary rounded-pill">RA: 082230004</span>
                     </li>
 
                     <li class="list-group-item d-flex justify-content-between align-items-center">
-                        JOSÉ GABRIEL
-                        <span class="badge bg-secondary rounded-pill">RA: 0000</span>
+                        JOSÉ GABRIEL DE MORAIS SOUZA
+                        <span class="badge bg-secondary rounded-pill">RA: 082230001</span>
                     </li>
 
                     <li class="list-group-item d-flex justify-content-between align-items-center">
-                        LUCAS DAIKI
-                        <span class="badge bg-secondary rounded-pill">RA: 0000</span>
+                        LUCAS DAIKI HONDA KUNIYOSI
+                        <span class="badge bg-secondary rounded-pill">RA: 082230020</span>
                     </li>
 
                     <li class="list-group-item d-flex justify-content-between align-items-center">
-                        RONALDO SANTOS
-                        <span class="badge bg-secondary rounded-pill">RA: 0000</span>
+                        RONALDO DE OLIVEIRA SANTOS
+                        <span class="badge bg-secondary rounded-pill">RA: 082230031</span>
                     </li>
 
                 </ul>
