--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -52,7 +52,7 @@
 
     <footer class="border-top footer text-muted mt-auto">
         <div class="container">
-            &copy; @DateTime.Now.Year - Winedge - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; @DateTime.Now.Year - Winedge</a>
         </div>
     </footer>
 
