--- a/Views/Devices/Create.cshtml
+++ b/Views/Devices/Create.cshtml
@@ -21,11 +21,11 @@
 
                     <div asp-validation-summary="ModelOnly" class="text-danger mb-3"></div>
 
-                    <div class="mb-3">
+                    @* <div class="mb-3">
                         <label asp-for="DeviceName" class="control-label">Dispositivo</label>
                         <input asp-for="DeviceName" class="form-control" />
                         <span asp-validation-for="DeviceName" class="text-danger"></span>
-                    </div>
+                    </div> *@
 
                     <h5 class="h6 mb-3">Configuração de Limites (Opcional)</h5>
                     <div class="row mb-3">
