fix triggers name

--- a/Views/Devices/Details.cshtml
+++ b/Views/Devices/Details.cshtml
@@ -285,9 +285,9 @@
 
             // CONTROLE DO BUZZER AUTOMÁTICO
             if (anyExceeded) {
-                sendBuzzerCommand("on");
+                sendBuzzerCommand("buzzer_on");
             } else {
-                sendBuzzerCommand("off");
+                sendBuzzerCommand("buzzer_off");
             }
         }
 
